# light_orchestra

./: Cargo.toml  README.md  tasks.example.yaml
archive/: dashboard.py  run.py
docs/: CODEX_REVIEW.md  DESIGN.md  MCP_DEADLOCK_ANALYSIS.md
docs/plans/: 2026-03-07-refactoring-plan.md
docs/skills/: run-with-codex-par.md
src/: artifact.rs  config.rs  coordinator.rs  dashboard.rs  event.rs  execution.rs  main.rs  message.rs  meta.rs  runner.rs
src/commands/: clean.rs  mod.rs  run.rs  serve.rs  status.rs  tail.rs
tests/: integration_test.rs  mcp_behavior_test.rs
tests/fixtures/: fake_codex.rs
