[package]
name = "codex-par"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fake_codex"
path = "tests/fixtures/fake_codex.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
anyhow = "1"
tokio-util = "0.7"
libc = "0.2"
